--- a/examples/vue-kitchen-sink/src/stories/addon-controls.stories.mdx
+++ b/examples/vue-kitchen-sink/src/stories/addon-controls.stories.mdx
@@ -42,7 +42,7 @@ Controls can also be defined and used in MDX stories.
   <Story
     name="Square"
     args={{
-      rounded: false,
+      // rounded: false, test out default value handling
       color: '#00f',
       label: 'A Button with square edges',
     }}
