--- a/examples/official-storybook/stories/addon-docs/csf-with-mdx-docs.stories.mdx
+++ b/examples/official-storybook/stories/addon-docs/csf-with-mdx-docs.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import * as Csf from './csf-with-mdx-docs.stories';
 
 <Meta title="Addons/Docs/csf-with-mdx-docs" />
@@ -8,11 +8,13 @@ import * as Csf from './csf-with-mdx-docs.stories';
 I can define a story with the function imported from CSF:
 
 <Canvas>
-  <Story name="basic" story={Csf.Basic} />
+  <Story name="with args" story={Csf.WithArgs} />
 </Canvas>
 
+<ArgsTable />
+
 <Canvas>
-  <Story name="with args" story={Csf.WithArgs} />
+  <Story name="basic" story={Csf.Basic} />
 </Canvas>
 
 <Canvas>
