--- a/docs/snippets/common/button-story-hide-nocontrols-warning.js.mdx
+++ b/docs/snippets/common/button-story-hide-nocontrols-warning.js.mdx
@@ -1,6 +1,8 @@
 ```js
 // Button.stories.js
 
+export const Large = Template.bind({});
+
 Basic.parameters = {
   controls: { hideNoControlsWarning: true },
 };
