--- a/docs/snippets/common/mdx-canvas-multiple-stories.mdx.mdx
+++ b/docs/snippets/common/mdx-canvas-multiple-stories.mdx.mdx
@@ -1,8 +1,7 @@
 ```md
-
 import { Canvas } from '@storybook/addon-docs/blocks';
 
-export const Template = (args) => <Badge {...args } />
+export const Template = (args) => <Badge {...args } />;
 
 <Canvas>
   <Story name="warning" args={{status: 'warning', label: 'Warning'}}>
@@ -15,5 +14,4 @@ export const Template = (args) => <Badge {...args } />
     {Template.bind({})}
   </Story>
 </Canvas>
-
 ```
