--- a/docs/snippets/common/badge-story.mdx.mdx
+++ b/docs/snippets/common/badge-story.mdx.mdx
@@ -2,12 +2,15 @@
 
 <!---Badge.stories.mdx --->
 
+<!--- This is your Story template function, shown here in React -->
+
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 import { Badge } from './Badge';
 import { Icon } from './Icon';
 
 <Meta title="MDX/Badge" component={Badge} />
+
 export const Template = (args) => <Badge {...args } />
 
 # Badge
