--- a/docs/snippets/common/checkbox-story.mdx.mdx
+++ b/docs/snippets/common/checkbox-story.mdx.mdx
@@ -1,6 +1,8 @@
 ```md
 <!--- Checkbox.stories.mdx -->
 
+<!--- This is your Story template function, shown here in React -->
+
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import { Checkbox } from './Checkbox';
 
