--- a/docs/snippets/common/component-story-mdx-story-by-name.mdx.mdx
+++ b/docs/snippets/common/component-story-mdx-story-by-name.mdx.mdx
@@ -1,4 +1,8 @@
 ```md
+<!-- Button.stories.mdx --->
+
+<!--- This is your Story template function, shown here in React -->
+
 import { Story } from '@storybook/addon-docs/blocks';
 import { Button } from './Button';
 
