--- a/docs/snippets/common/mdx-canvas-multiple-stories.mdx.mdx
+++ b/docs/snippets/common/mdx-canvas-multiple-stories.mdx.mdx
@@ -1,4 +1,8 @@
 ```md
+<!-- MyComponent.stories.mdx --->
+
+<!--- This is your Story template function, shown here in React -->
+
 import { Canvas } from '@storybook/addon-docs/blocks';
 
 export const Template = (args) => <Badge {...args } />;
