component-story-with-query was adjusted. Now is using a template

--- a/docs/snippets/react/component-story-with-query.js.mdx
+++ b/docs/snippets/react/component-story-with-query.js.mdx
@@ -3,7 +3,9 @@
 
 import MyComponentThatHasAQuery, { MyQuery} from '../component-that-has-a-query';
 
-export const LoggedOut = () => <MyComponentThatHasAQuery />;
+const Template=(args)=><MyComponentThatHasAQuery {...args}/>;
+
+export const LoggedOut = () => Template.bind({});
 LoggedOut.parameters: {
   apolloClient: {
     mocks: [
