--- a/docs/snippets/common/widget-story-controls-enum.js.mdx
+++ b/docs/snippets/common/widget-story-controls-enum.js.mdx
@@ -6,7 +6,7 @@ export default {
   component: Widget,
   argTypes: {
     loadingState: {
-      type: 'inline-radio',
+      control: 'inline-radio',
       options: ['loading', 'error', 'ready'],
     },
   },
