--- a/examples/angular-cli/src/stories/addon-docs.stories.mdx
+++ b/examples/angular-cli/src/stories/addon-docs.stories.mdx
@@ -3,7 +3,7 @@ import { Story, Meta, ArgsTable } from '@storybook/addon-docs/blocks';
 import { Welcome, Button } from '@storybook/angular/demo';
 import { linkTo } from '@storybook/addon-links';
 import { text, withKnobs } from '@storybook/addon-knobs';
-import { DocsButtonComponent } from './doc-button/doc-button.component';
+import { DocButtonComponent } from './doc-button/doc-button.component';
 
 # Storybook Docs for Angular
 
