--- a/docs/snippets/react/button-story-with-args.ts.mdx
+++ b/docs/snippets/react/button-story-with-args.ts.mdx
@@ -1,6 +1,8 @@
 ```ts
 // Button.stories.ts
 
+import { Story } from '@storybook/react';
+
 const Template: Story<ButtonProps> = (args) => <Button {...args} />;
 
 export const Primary = Template.bind({});
