--- a/docs/snippets/react/button-story-with-args.ts.mdx
+++ b/docs/snippets/react/button-story-with-args.ts.mdx
@@ -1,7 +1,7 @@
 ```ts
 // Button.stories.ts
 
-import { Story } from '@storybook/react';
+import { Story } from '@storybook/react/types-6-0';
 
 const Template: Story<ButtonProps> = (args) => <Button {...args} />;
 
