more tweaks to the snippets

--- a/docs/snippets/react/your-component.ts.mdx
+++ b/docs/snippets/react/your-component.ts.mdx
@@ -2,8 +2,9 @@
 // YourComponent.stories.tsx
 
 import React from 'react';
-import YourComponent from './your-component.component';
+import { YourComponent } from './YourComponent';
 
+// This default export determines where you story goes in the story list
 export default {
   title: 'YourComponent',
   component: YourComponent,
