--- a/docs/snippets/react/button-story-component-decorator.ts.mdx
+++ b/docs/snippets/react/button-story-component-decorator.ts.mdx
@@ -1,5 +1,5 @@
 ```ts
-// button.stories.tsx
+// Button.stories.tsx
 
 import React from 'react';
 import { Story, Meta } from '@storybook/react/types-6-0';
