--- a/docs/snippets/react/page-story-with-args-composition.ts.mdx
+++ b/docs/snippets/react/page-story-with-args-composition.ts.mdx
@@ -1,5 +1,5 @@
 ```js
-// your-page.stories.js
+// YourPage.stories.js
 
 import React from 'react';
 import { Story, Meta } from '@storybook/react/types-6-0';
