docs: use template for decorators

--- a/docs/snippets/vue/button-story-component-decorator.js.mdx
+++ b/docs/snippets/vue/button-story-component-decorator.js.mdx
@@ -6,6 +6,6 @@ import Button from './Button';
 export default {
   title: 'Components/Button',
   component: Button,
-  decorators: [() => '<div style="margin: 3em;"><story /></div>'],
+  decorators: [() => ({ template: '<div style="margin: 3em;"><story /></div>' })],
 };
 ```
