--- a/docs/snippets/vue/storybook-preview-global-decorator.js.mdx
+++ b/docs/snippets/vue/storybook-preview-global-decorator.js.mdx
@@ -1,5 +1,5 @@
 // .storybook/preview.js
 
 ```js
-export const decorators = [() => '<div style="margin: 3em;"><story /></div>'];
+export const decorators = [() => ({ template: '<div style="margin: 3em;"><story /></div>' })];
 ```
