--- a/docs/snippets/vue/your-component-with-decorator.js.mdx
+++ b/docs/snippets/vue/your-component-with-decorator.js.mdx
@@ -3,6 +3,6 @@
 
 export default {
   component: YourComponent,
-  decorators: [() => '<div style="margin: 3em";><story/></div>'],
+  decorators: [() => ({ template: '<div style="margin: 3em;"><story/></div>' })],
 };
 ```
