--- a/docs/snippets/vue/button-story-decorator.js.mdx
+++ b/docs/snippets/vue/button-story-decorator.js.mdx
@@ -9,5 +9,5 @@ export const Primary = () => ({
   components: { Button },
   template: '<Button primary label="Hello World" />',
 });
-Primary.decorators = [() => '<div style="margin: 3em;"><story /></div>'];
+Primary.decorators = [() => ({ template: '<div style="margin: 3em;"><story /></div>' })];
 ```
