--- a/docs/snippets/react/your-component.ts.mdx
+++ b/docs/snippets/react/your-component.ts.mdx
@@ -1,7 +1,7 @@
 ```ts
 // YourComponent.stories.tsx
 
-import React from 'react';
+import React, { ComponentProps } from 'react';
 import { YourComponent } from './YourComponent';
 
 // This default export determines where your story goes in the story list
@@ -10,10 +10,7 @@ export default {
   component: YourComponent,
 };
 
-const Template = (args: YourComponent) => ({
-  component: YourComponent,
-  props: args,
-});
+const Template = (args: ComponentProps<typeof YourComponent>) => <YourComponent {...args} />
 
 export const FirstStory = Template.bind({});
 FirstStory.args = {
