chore: addon documentation restructuring

--- a/docs/snippets/common/storybook-addon-change-panel.js.mdx
+++ b/docs/snippets/common/storybook-addon-change-panel.js.mdx
@@ -1,5 +1,5 @@
 ```js
-// .storybook/my-addon/register.js
+// /my-addon/src/register.js
 
 import { useParameter } from '@storybook/api';
 const PARAM_KEY = 'myAddon';
