--- a/docs/snippets/common/storybook-addon-panel-initial.js.mdx
+++ b/docs/snippets/common/storybook-addon-panel-initial.js.mdx
@@ -1,5 +1,5 @@
 ```js
-// .storybook/my-addon/register.js
+// /my-addon/src/register.js
 
 import React from 'react';
 import { addons, types } from '@storybook/addons';
@@ -10,6 +10,7 @@ const PANEL_ID = `${ADDON_ID}/panel`;
 
 // give a unique name for the panel
 const MyPanel = () => <div>MyAddon</div>;
+
 addons.register(ADDON_ID, (api) => {
   addons.add(PANEL_ID, {
     type: types.PANEL,
