updates per feedback

--- a/docs/snippets/common/my-addon-initial-panel-state.js.mdx
+++ b/docs/snippets/common/my-addon-initial-panel-state.js.mdx
@@ -1,5 +1,5 @@
 ```js
-// .storybook/my-addon/register.js
+// /my-addon/src/register.js
 
 import React from 'react';
 import { addons, types } from '@storybook/addons';
