--- a/docs/snippets/common/storybook-addon-change-panel.js.mdx
+++ b/docs/snippets/common/storybook-addon-change-panel.js.mdx
@@ -2,10 +2,12 @@
 // /my-addon/src/register.js
 
 import { useParameter } from '@storybook/api';
+
 const PARAM_KEY = 'myAddon';
+
 const MyPanel = () => {
   const value = useParameter(PARAM_KEY, null);
-  const item = value ? value.data : '';
+  const item = value ? value.data : 'No story parameter defined';
   return <div>{item}</div>;
 };
 ```
