fixed file reference

--- a/docs/snippets/common/my-addon-root-level-preset.js.mdx
+++ b/docs/snippets/common/my-addon-root-level-preset.js.mdx
@@ -1,5 +1,5 @@
 ```js
 // /my-addon/preset.js
 
-module.exports = require('./dist/register.js');
+module.exports = require('./dist/preset.js');
 ```
