--- a/docs/snippets/common/my-addon-storybook-registration.js.mdx
+++ b/docs/snippets/common/my-addon-storybook-registration.js.mdx
@@ -7,7 +7,7 @@ module.exports = {
     "@storybook/addon-links",
     "@storybook/addon-essentials",
     "@storybook/preset-create-react-app",
-    "../src/register.js" //👈 Our addon registered here
+    "../src/preset.js" //👈 Our addon registered here
   ]
 }
 ```
