Addon-docs: Remove unused titleFunction export

--- a/examples/official-storybook/stories/addon-docs/meta-string-template.stories.mdx
+++ b/examples/official-storybook/stories/addon-docs/meta-string-template.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story } from '@storybook/addon-docs/blocks';
-import { titleFunction } from '@storybook/addon-docs';
+import { titleFunction } from './title-generators';
 
 <Meta title={`${titleFunction('template')}`} />
 
