--- a/docs/snippets/react/list-story-with-unchecked-children.ts.mdx
+++ b/docs/snippets/react/list-story-with-unchecked-children.ts.mdx
@@ -1,10 +1,14 @@
+```ts
 // List.stories.tsx
 
 import React from 'react';
 import { List } from './List';
 import { Unchecked } from './ListItem.stories';
 
+const Template = (args) => <List {...args} />;
+
 export const OneItem = Template.bind({});
 OneItem.args = {
   children: <Unchecked {...Unchecked.args} />,
 };
+```
