📓 DOCS: Setup / Vue - Preview Global Decorator

--- a/docs/snippets/vue/storybook-preview-global-decorator.js.mdx
+++ b/docs/snippets/vue/storybook-preview-global-decorator.js.mdx
@@ -1,5 +1,5 @@
 ```js
 // .storybook/preview.js
 
-export const decorators = [() => ({ template: '<div style="margin: 3em;"><story /></div>' })];
+export const decorators = [(story) => ({ template: '<div style="margin: 3em;"><story /></div>' })];
 ```
