fixes the icons referenced for consistency

--- a/docs/snippets/vue/component-story-custom-args-icons.js.mdx
+++ b/docs/snippets/vue/component-story-custom-args-icons.js.mdx
@@ -3,10 +3,10 @@
 
 import YourComponent from "./YourComponent.vue";
 
-import { browser, tablet, mobile, user, watch } from "./icons";
+import { IconA, IconB, IconC, IconD, IconE } from './icons';
 
 // Maps the icons to a JSON serializable object to be safely used with the argTypes
-const iconMap = { browser, tablet, mobile, user, watch };
+const iconMap = {IconA, IconB, IconC, IconD, IconE };
 
 export default {
   title: 'My Story with Icons',
