Add missing import

--- a/docs/snippets/react/list-story-with-unchecked-children.ts.mdx
+++ b/docs/snippets/react/list-story-with-unchecked-children.ts.mdx
@@ -2,7 +2,7 @@
 // List.stories.tsx
 
 import React from 'react';
-import { List } from './List';
+import { List, ListProps } from './List';
 import { Unchecked } from './ListItem.stories';
 
 const Template: Story<ListProps> = (args) => <List {...args} />;
