Fix broken configuration

--- a/examples/official-storybook/stories/addon-docs/markdown.stories.mdx
+++ b/examples/official-storybook/stories/addon-docs/markdown.stories.mdx
@@ -1,9 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta
-  title="Addons/Docs/markdown-docs"
-  parameters={{ previewTabs: { 'storybook/docs/panel': { index: -1 } } }}
-/>
+<Meta title="Addons/Docs/markdown-docs" />
 
 # h1 Heading
 
