list-story-reuse-data snippet updated

--- a/docs/snippets/vue/list-story-reuse-data.js.mdx
+++ b/docs/snippets/vue/list-story-reuse-data.js.mdx
@@ -17,4 +17,8 @@ export const ManyItems = (args, { argTypes }) => ({
     </list>
     `,
 });
+ManyItems.args = {
+  Selected: Selected.args.itemProperty,
+  Unselected: Unselected.args.itemProperty,
+};
 ```
