adds missing angular scripts

--- a/docs/snippets/angular/button-story-with-args.ts.mdx
+++ b/docs/snippets/angular/button-story-with-args.ts.mdx
@@ -2,7 +2,8 @@
 //Button.stories.ts
 
 const Template = (args: Button) => ({
-  props: args,
+  component: Button,
+  props: args
 });
 
 export const Primary = Template.bind({});
