--- a/docs/snippets/angular/list-story-reuse-data.ts.mdx
+++ b/docs/snippets/angular/list-story-reuse-data.ts.mdx
@@ -6,9 +6,9 @@ import * as ListItemStories from './ListItem.stories';
 export const ManyItems = Template.bind({});
 ManyItems.args = {
   items: [
-    ...ListItemStories.Selected.args,
-    ...ListItemStories.Unselected.args,
-    ...ListItemStoriesUnselected.args,
+    { ...ListItemStories.Selected.args },
+    { ...ListItemStories.Unselected.args },
+    { ...ListItemStories.Unselected.args },
   ],
 };
 ```
