--- a/docs/snippets/angular/your-component.ts.mdx
+++ b/docs/snippets/angular/your-component.ts.mdx
@@ -1,6 +1,7 @@
 ```ts
-// YourComponent.stories.tsx
-import { Meta, moduleMetadata, Story } from '@storybook/angular';
+// YourComponent.stories.ts
+
+import { Meta, Story } from '@storybook/angular';
 
 import { YourComponent } from './your.component';
 
@@ -10,7 +11,8 @@ export default {
   component: YourComponent,
 } as Meta;
 
-const Template: Story<YourComponent> = (args) => ({
+const Template: Story<YourComponent> = (args:YourComponent) => ({
+  component:YourComponent,
   props: args,
 });
 
