--- a/docs/snippets/angular/button-story-with-args.ts.mdx
+++ b/docs/snippets/angular/button-story-with-args.ts.mdx
@@ -3,7 +3,7 @@
 
 const Template = (args: Button) => ({
   component: Button,
-  props: args
+  props: args,
 });
 
 export const Primary = Template.bind({});
