--- a/docs/snippets/angular/component-story-custom-args-complex.ts.mdx
+++ b/docs/snippets/angular/component-story-custom-args-complex.ts.mdx
@@ -39,7 +39,7 @@ const Template: Story<YourComponent> = (args: YourComponent) => {
     component: YourComponent,
     props: {
       ...args,
-      someProperty:someFunctionResult
+      someProperty: someFunctionResult,
     },
   };
 };
