--- a/docs/snippets/angular/component-story-custom-args-icons.ts.mdx
+++ b/docs/snippets/angular/component-story-custom-args-icons.ts.mdx
@@ -30,7 +30,7 @@ const Template: Story<Icon> = (args: Icon) => {
     component: Icon,
     props: {
       ...args,
-      icon:selectedIcon
+      icon: selectedIcon,
     },
   };
 };
