--- a/docs/snippets/angular/button-story-default-docs-code.ts.mdx
+++ b/docs/snippets/angular/button-story-default-docs-code.ts.mdx
@@ -17,15 +17,15 @@ const someFunction = (someValue: string) => {
   return `i am a ${someValue}`;
 };
 
-export const ExampleStory: Story<ComplexCase> = (args: ComplexCase) => {
+export const ExampleStory: Story<Button> = (args: Button) => {
   const { label } = args;
   // assigns the function result to a variable and pass it as a prop into the component
   const functionResult = someFunction(label);
   return {
-    component: ComplexCase,
+    component: Button,
     props: {
       ...args,
-      label:functionResult
+      label: functionResult,
     },
   };
 };
