angular snippets adjustments

--- a/docs/snippets/angular/button-story-with-args.ts.mdx
+++ b/docs/snippets/angular/button-story-with-args.ts.mdx
@@ -1,7 +1,9 @@
 ```ts
 //Button.stories.ts
 
-const Template = (args: Button) => ({
+import { Story } from '@storybook/angular/types-6-0';
+
+const Template: Story<Button> = (args: Button) => ({
   component: Button,
   props: args,
 });
