--- a/docs/snippets/angular/list-story-with-subcomponents.ts.mdx
+++ b/docs/snippets/angular/list-story-with-subcomponents.ts.mdx
@@ -1,4 +1,6 @@
 ```ts
+// List.stories.ts
+
 import { Meta, moduleMetadata, Story } from '@storybook/angular';
 import { ListItemComponent } from './list-item.component';
 import { ListComponent } from './list.component';
