updates args definition

--- a/docs/snippets/angular/app-story-with-mock.ts.mdx
+++ b/docs/snippets/angular/app-story-with-mock.ts.mdx
@@ -9,7 +9,7 @@ export default {
   title: 'App',
 } as Meta;
 
-const Template: Story<AppComponent> = (args: AppComponent) => ({
+const Template: Story<AppComponent> = (args) => ({
   component: AppComponent,
   props: args,
 });
