--- a/docs/snippets/angular/button-group-story.ts.mdx
+++ b/docs/snippets/angular/button-group-story.ts.mdx
@@ -21,7 +21,7 @@ export default {
   ],
 } as Meta;
 
-const Template: Story<ButtonGroup> = (args: ButtonGroup) => ({
+const Template: Story<ButtonGroup> = (args) => ({
   component: ButtonGroup,
   props: args,
 });
