--- a/docs/snippets/angular/component-story-custom-args-complex.ts.mdx
+++ b/docs/snippets/angular/component-story-custom-args-complex.ts.mdx
@@ -30,7 +30,7 @@ export default {
   },
 } as Meta;
 
-const Template: Story<YourComponent> = (args: YourComponent) => {
+const Template: Story<YourComponent> = (args) => {
   const { propertyA, propertyB } = args;
 
   const someFunctionResult = someFunction(propertyA, propertyB);
