--- a/docs/snippets/angular/list-story-reuse-data.ts.mdx
+++ b/docs/snippets/angular/list-story-reuse-data.ts.mdx
@@ -3,7 +3,7 @@
 
 import { Selected, Unselected } from './ListItem.stories';
 
-export const ManyItems: Story<List> = (args: List) => ({
+export const ManyItems: Story<List> = (args) => ({
   props: args,
   template: `
     <app-list>
