--- a/docs/snippets/angular/list-story-starter.ts.mdx
+++ b/docs/snippets/angular/list-story-starter.ts.mdx
@@ -20,7 +20,7 @@ export default {
 } as Meta;
 
 // Always an empty list, not super interesting
-const Template: Story<List> = (args: List) => ({
+const Template: Story<List> = (args) => ({
   props: args,
   template: `<app-list></app-list>`,
 });
