--- a/docs/snippets/angular/list-story-template.ts.mdx
+++ b/docs/snippets/angular/list-story-template.ts.mdx
@@ -8,7 +8,7 @@ import ListItemComponent from './ListItem.component';
 
 import { Unchecked } from './ListItem.stories';
 
-const ListTemplate: Story<ListComponent> = (args: ListComponent) => ({
+const ListTemplate: Story<ListComponent> = (args) => ({
   component: ListComponent,
   moduleMetadata: {
     declarations: [ListComponent, ListItemComponent],
