--- a/docs/snippets/angular/list-story-with-subcomponents.ts.mdx
+++ b/docs/snippets/angular/list-story-with-subcomponents.ts.mdx
@@ -11,7 +11,7 @@ export default {
   subcomponents: { ListItemComponent },
 } as Meta;
 
-const Template: Story<ListComponent> = (args: ListComponent) => ({
+const Template: Story<ListComponent> = (args) => ({
   props: args,
   moduleMetadata: {
     declarations: [ListComponent, ListItemComponent],
