--- a/docs/snippets/angular/my-component-with-env-variables.ts.mdx
+++ b/docs/snippets/angular/my-component-with-env-variables.ts.mdx
@@ -10,7 +10,7 @@ export default {
   title: 'A story using environment variables inside a .env file',
 } as Meta;
 
-const Template: Story<MyComponent> = (args: MyComponent) => ({
+const Template: Story<MyComponent> = (args) => ({
   component: MyComponent,
   props: args
 });
