--- a/docs/snippets/angular/page-story-with-args-composition.ts.mdx
+++ b/docs/snippets/angular/page-story-with-args-composition.ts.mdx
@@ -28,7 +28,7 @@ export default {
   ],
 } as Meta;
 
-const Template: Story<DocumentScreen> = (args: DocumentScreen) => ({
+const Template: Story<DocumentScreen> = (args) => ({
   component: DocumentScreen,
   props: args,
 });
