--- a/docs/snippets/angular/table-story-fully-customize-controls.ts.mdx
+++ b/docs/snippets/angular/table-story-fully-customize-controls.ts.mdx
@@ -1,7 +1,7 @@
 ```ts
 // Table.stories.ts
 
-const TableStory: Story<TableComponent> = (args: TableComponent) => ({
+const TableStory: Story<TableComponent> = (args) => ({
   component: TableComponent,
   props: args,
   template: `
