--- a/docs/snippets/angular/your-component.ts.mdx
+++ b/docs/snippets/angular/your-component.ts.mdx
@@ -11,7 +11,7 @@ export default {
   component: YourComponent,
 } as Meta;
 
-const Template: Story<YourComponent> = (args: YourComponent) => ({
+const Template: Story<YourComponent> = (args) => ({
   component: YourComponent,
   props: args,
 });
