--- a/docs/snippets/angular/button-story-default-docs-code.ts.mdx
+++ b/docs/snippets/angular/button-story-default-docs-code.ts.mdx
@@ -18,7 +18,7 @@ const someFunction = (someValue: string) => {
   return `i am a ${someValue}`;
 };
 
-export const ExampleStory: Story<Button> = (args: Button) => {
+export const ExampleStory: Story<Button> = (args) => {
   const { label } = args;
   // assigns the function result to a variable and pass it as a prop into the component
   const functionResult = someFunction(label);
