--- a/docs/snippets/angular/button-story-with-args.ts.mdx
+++ b/docs/snippets/angular/button-story-with-args.ts.mdx
@@ -3,7 +3,7 @@
 
 import { Story } from '@storybook/angular/types-6-0';
 
-const Template: Story<Button> = (args: Button) => ({
+const Template: Story<Button> = (args) => ({
   component: Button,
   props: args,
 });
