adjustments per feedback

--- a/docs/get-started/installation-command-section/vue.mdx
+++ b/docs/get-started/installation-command-section/vue.mdx
@@ -2,7 +2,7 @@ Use the Storybook CLI to install it in a single command. Run this inside your ex
 
 ```shell
 # Add Storybook:
-npx -p @storybook/cli sb init
+npx sb init
 ```
 
 For Vue 3 projects, run this inside your project’s root directory:
