--- a/docs/snippets/vue/button-story-click-handler-simple-docs.vue3.js.mdx
+++ b/docs/snippets/vue/button-story-click-handler-simple-docs.vue3.js.mdx
@@ -1,7 +1,7 @@
 ```js
 // Button.stories.js
 
-export const Text = ({ label, onClick }) => ({
+export const Text = ({ label }) => ({
   components: { Button },
   setup() {
     return {
