--- a/docs/snippets/vue/component-story-custom-args-complex.vue3.js.mdx
+++ b/docs/snippets/vue/component-story-custom-args-complex.vue3.js.mdx
@@ -34,11 +34,13 @@ const Template = (args) => {
   return {
     components: { YourComponent },
     setup() {
-      //👇 The args will now be passed down to the component
+      //👇 The args will now be passed down to the template
       return {
-        ...args,
-        //👇 Replaces arg variable with the override (without the need of mutation)
-        someProperty: functionResult,
+        args: {
+          ...args,
+          //👇 Replaces arg variable with the override (without the need of mutation)
+          someProperty: functionResult,
+        },
       };
     },
     template: '<YourComponent v-bind="args" />',
