--- a/docs/snippets/vue/component-story-custom-args-icons.vue3.js.mdx
+++ b/docs/snippets/vue/component-story-custom-args-icons.vue3.js.mdx
@@ -23,14 +23,16 @@ export default {
 };
 
 const Template = (args) => {
-  return {  
+  return {
     components: { YourComponent },
     setup() {
-      //👇 The args will now be passed down to the component
+      //👇 The args will now be passed down to the template
       return {
-        ...args,
-        //👇 Replaces the local variable with the override (without mutating it)
-        icon: iconMap[args.icon],
+        args: {
+          ...args,
+          //👇 Replaces the local variable with the override (without mutating it)
+          icon: iconMap[args.icon],
+        },
       };
     },
     template: '<YourComponent v-bind="args" />',
