--- a/docs/snippets/vue/page-story-with-args-composition.vue3.js.mdx
+++ b/docs/snippets/vue/page-story-with-args-composition.vue3.js.mdx
@@ -13,7 +13,7 @@ export default {
   title: 'DocumentScreen',
 };
 
-const Template = (args, { argTypes }) => ({
+const Template = (args) => ({
   components: { DocumentScreen },
   setup() {
     return { args };
