--- a/docs/get-started/installation-command-section/react.mdx
+++ b/docs/get-started/installation-command-section/react.mdx
@@ -2,7 +2,7 @@ Use the Storybook CLI to install it in a single command. Run this inside your ex
 
 ```shell
 # Add Storybook:
-npx -p @storybook/cli sb init
+npx sb init
 ```
 
 If you run into issues with the installation, check the troubleshooting section below for guidance on how to solve it.
