--- a/docs/snippets/vue/app-story-with-mock.vue3.js.mdx
+++ b/docs/snippets/vue/app-story-with-mock.vue3.js.mdx
@@ -13,7 +13,7 @@ const Template = (args) => ({
   setup() {
     return { args };
   }
-  template: "<App />"
+  template: "<App v-bind="args"/>"
 });
 
 export const Success = Template.bind({});
