--- a/docs/snippets/vue/your-component.vue3.js.mdx
+++ b/docs/snippets/vue/your-component.vue3.js.mdx
@@ -13,7 +13,7 @@ export default {
 const Template = (args) => ({
   components: { YourComponent },
   setup() {
-    //👇 The args will now be passed down to the component
+    //👇 The args will now be passed down to the template
     return { args };
   },
   template: '<YourComponent v-bind="args"/>',
