fixes for the list and table examples

--- a/docs/snippets/vue/list-story-template.vue2.js.mdx
+++ b/docs/snippets/vue/list-story-template.vue2.js.mdx
@@ -12,8 +12,8 @@ const ListTemplate = (args, { argTypes }) => ({
   components: { List, ListItem },
   template: `
     <List v-bind="$props">
-        <div v-for="item in items" :key="item.someString">
-            <ListItem v-bind="$props"/>
+        <div v-for="item in items" :key="item.title">
+            <ListItem :item="item" />
         </div>
     </List>
     `,
