--- a/docs/snippets/vue/table-story-fully-customize-controls.vue2.js.mdx
+++ b/docs/snippets/vue/table-story-fully-customize-controls.vue2.js.mdx
@@ -5,12 +5,13 @@ const TableStory = (args, { argTypes }) => ({
   components: { Table },
   props: Object.keys(argTypes),
   template: `
-    <tr v-for="(row, idx1) in data">
+    <Table v-bind="$props">
+      <tr v-for="(row, idx1) in data">
         <td v-for="(col, idx2) in row">
-            {{ data[idx1][idx2] }}
+          {{ data[idx1][idx2] }}
         </td>
-    </tr>
-  `,
+      </tr>
+    </Table>`,
 });
 
 export const Numeric = TableStory.bind({});
