--- a/docs/snippets/vue/table-story-fully-customize-controls.vue3.js.mdx
+++ b/docs/snippets/vue/table-story-fully-customize-controls.vue3.js.mdx
@@ -7,11 +7,13 @@ const TableStory = (args) => ({
     return { args };
   },
   template: `
-    <tr v-for="(row, idx1) in data">
+    <Table v-bind="args">
+      <tr v-for="(row, idx1) in data">
         <td v-for="(col, idx2) in row">
             {{ data[idx1][idx2] }}
         </td>
-    </tr>
+      </tr>
+    </Table>
   `,
 });
 
