--- a/docs/snippets/vue/list-story-template.vue3.js.mdx
+++ b/docs/snippets/vue/list-story-template.vue3.js.mdx
@@ -14,15 +14,15 @@ const ListTemplate = (args) => ({
   },
   template: `
     <List v-bind="args">
-        <div v-for="item in items" :key="item.someString">
-            <ListItem v-bind="args"/>
-        </div>
+      <div v-for="item in items" :key="item.title">
+        <ListItem :item="item"/>
+      </div>
     </List>
     `,
 });
 
 export const Empty = ListTemplate.bind({});
-EmptyListTemplate.args = {
+Empty.args = {
   items: [],
 };
 
