Renames the vue snippets for clarity

--- a/docs/snippets/vue/app-story-with-mock.2.js.mdx
+++ b/docs/snippets/vue/app-story-with-mock.2.js.mdx
@@ -8,12 +8,10 @@ export default {
   component: App
 };
 
-const Template = (args) => ({
+const Template = (args, { argTypes }) => ({
+  props: Object.keys(argTypes),
   components: { App },
-  setup() {
-    return { args };
-  }
-  template: "<App v-bind="args"/>"
+  template: '<App v-bind="$props"/>',
 });
 
 export const Success = Template.bind({});
