--- a/docs/snippets/react/button-story.with-hooks.js.mdx
+++ b/docs/snippets/react/button-story.with-hooks.js.mdx
@@ -5,8 +5,11 @@ import React, { useState } from 'react';
 
 import { Button } from './Button';
 
+/*
+* Example Button story with React Hooks.
+* See note below related to this example.
+*/
 export const Primary = () => {
-
   // Sets the hooks for both the label and primary props
   const [value, setValue] = useState('Secondary');
   const [isPrimary, setIsPrimary] = useState(false);
